Small additions to page.

--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Hello Coursera!</title>
-</head>
-<body>
-<h1>Hello Coursera! This is cool =)</h1>
-</body>
+	<head>
+		<title>Welcome to my website!</title>
+	</head>
+		<body>
+			<h1 style="color: green; font-size: 60px; text-align: center;">Hello Coursera! This is cool =)</h1>
+			<p style="margin: 0 100px 0 100px; font-size: 1.5em;">I'm starting to like this course!</p>
+			<p>I had my doubts before, but I was wrong.</p>
+			<footer>
+				<hr>
+				<p style="text-align: center;" onclick="alert('EMAILING US IS USELESS');">Tech Support: yeah.right@server-is-down.com</p>
+			</footer>
+		</body>
 </html>
