--- a/site/index.html
+++ b/site/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>Welcome to my website!</title>
 	</head>
 		<body>
 			<h1 style="color: green; font-size: 60px; text-align: center;">Hello Coursera! This is cool =)</h1>
 			<p style="margin: 0 100px 0 100px; font-size: 1.5em;">I'm starting to like this course!</p>
 			<p>I had my doubts before, but I was wrong.</p>
+			<h2> Unordered List</h2>
+			<div>
+				My list:
+				<ul>
+					<li>Milk</li>
+					<li>Cookies
+						<ul>
+							<li>Chocolate</li>
+							<li>Sugar</li>
+						</ul>
+					</li>
+					<li>Coke</li>
+				</ul>
+			</div>
 			<footer>
 				<hr>
 				<p style="text-align: center;" onclick="alert('EMAILING US IS USELESS');">Tech Support: yeah.right@server-is-down.com</p>
