Created same-dir.html from links lecture.

--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,9 @@
 			<h1 style="color: green; font-size: 60px; text-align: center;">Hello Coursera! This is cool =)</h1>
 			<p style="margin: 0 100px 0 100px; font-size: 1.5em;">I'm starting to like this course!</p>
 			<p>I had my doubts before, but I was wrong.</p>
+
 			<h2> Unordered List</h2>
+
 			<div>
 				My list:
 				<ul>
@@ -22,6 +24,17 @@
 					<li>Coke</li>
 				</ul>
 			</div>
+
+			<h3>Internal Links</h3>
+			<section>
+				We can link to a file in the same directory like this:
+				<a href="same-dir.html" title="same dir link">Link to a file in the same directory.</a>
+
+				<a href="same-dir.html" title="same dir link">
+					<div>DIV link to a file in the same directory.</div>
+				</a>
+			</section>
+
 			<footer>
 				<hr>
 				<p style="text-align: center;" onclick="alert('EMAILING US IS USELESS');">Tech Support: yeah.right@server-is-down.com</p>
