Added new links.

--- a/site/index.html
+++ b/site/index.html
@@ -35,6 +35,13 @@
 				</a>
 			</section>
 
+			<h3>External Links</h3>
+			<section>
+				<p>Let's link to an external page:
+					<a href="http://www.coursera.org" target="_blank" title="Coursera page!">Go to Coursera</a>
+				</p>
+			</section>
+
 			<footer>
 				<hr>
 				<p style="text-align: center;" onclick="alert('EMAILING US IS USELESS');">Tech Support: yeah.right@server-is-down.com</p>
