--- a/site/index.html
+++ b/site/index.html
@@ -25,6 +25,15 @@
 				</ul>
 			</div>
 
+			<h1>Images</h1>
+			<p>
+				<img src="t-shirt.png" width="800" height="600" alt="Funny chart with a quote."> &quot;Quote...&quot;
+			</p>
+
+			<p>
+				<img src="http://lorempixel.com/output/nature-q-c-640-480-1.jpg" width="640" height="480" alt="Ants on a leaf.">
+			</p>
+
 			<h3>Internal Links</h3>
 			<section>
 				We can link to a file in the same directory like this:
