--- a/site/index.html
+++ b/site/index.html
@@ -3,9 +3,22 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Welcome to my website!</title>
+		<style type="text/css">
+			p {
+				color: blue;
+				font-size: 20px;
+				width: 200px;
+			}
+
+			h1 {
+				color: green;
+				font-size: 20px;
+				text-align: center;
+			}
+		</style>
 	</head>
 		<body>
-			<h1 style="color: green; font-size: 60px; text-align: center;">Hello Coursera! This is cool =)</h1>
+			<h1>Hello Coursera! This is cool =)</h1>
 			<p style="margin: 0 100px 0 100px; font-size: 1.5em;">I'm starting to like this course!</p>
 			<p>I had my doubts before, but I was wrong.</p>
 
