--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,9 +3,22 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Module 2</title>
+	<title>Module 2 Solution</title>
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+	<h1>Responsive Layout</h1>
 
+	<div class="row">
+		<div class="col-lg-4 col-md-6">
+			<p>Item 1</p>
+		</div>
+		<div class="col-lg-4 col-md-6">
+			<p>Item 2</p>
+		</div>
+		<div class="col-lg-4 col-md-6">
+			<p>Item 3</p>
+		</div>
+	</div>
 </body>
 </html>
