--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -11,13 +11,13 @@
 
 	<div class="row">
 		<div class="col-lg-4 col-md-6">
-			<p>Item 1</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque.</p>
 		</div>
 		<div class="col-lg-4 col-md-6">
-			<p>Item 2</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque.</p>
 		</div>
 		<div class="col-lg-4 col-md-6">
-			<p>Item 3</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque.</p>
 		</div>
 	</div>
 </body>
