--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,19 +4,22 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Module 2 Solution</title>
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 	<h1>Our Menu</h1>
 
 	<div class="row">
 		<div class="col-lg-4 col-md-6">
+			<p class="chicken">Chicken</p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque.</p>
 		</div>
 		<div class="col-lg-4 col-md-6">
+			<p class="beef">Beef</p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque.</p>
 		</div>
 		<div class="col-lg-4 col-md-12">
+			<p class="sushi">Sushi</p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque.</p>
 		</div>
 	</div>
