--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -8,19 +8,28 @@
 </head>
 <body>
 	<h1>Our Menu</h1>
-
 	<div class="row">
-		<div class="col-lg-4 col-md-6">
-			<p class="chicken">Chicken</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque.</p>
+		<div class="container col-lg-4 col-md-6">
+			<section>
+				<div class="chicken">Chicken</div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque.</p>
+			</section>
 		</div>
-		<div class="col-lg-4 col-md-6">
-			<p class="beef">Beef</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque.</p>
+	</div>
+	<div class="row">
+		<div class="container col-lg-4 col-md-6">
+			<section>
+				<div class="beef">Chicken</div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque.</p>
+			</section>
 		</div>
-		<div class="col-lg-4 col-md-12">
-			<p class="sushi">Sushi</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque.</p>
+	</div>
+	<div class="row">
+		<div class="container col-lg-4 col-md-12">
+			<section>
+				<div class="sushi">Chicken</div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque.</p>
+			</section>
 		</div>
 	</div>
 </body>
