--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -9,25 +9,25 @@
 <body>
 	<h1>Our Menu</h1>
 	<div class="row">
-		<div class="container col-lg-4 col-md-6">
+		<div class="col-lg-4 col-md-6">
 			<section>
-				<div class="chicken">Chicken</div>
+				<div id="chicken">Chicken</div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque.</p>
 			</section>
 		</div>
 	</div>
 	<div class="row">
-		<div class="container col-lg-4 col-md-6">
+		<div class="col-lg-4 col-md-6">
 			<section>
-				<div class="beef">Chicken</div>
+				<div id="beef">Beef</div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque.</p>
 			</section>
 		</div>
 	</div>
 	<div class="row">
-		<div class="container col-lg-4 col-md-12">
+		<div class="col-lg-4 col-md-12">
 			<section>
-				<div class="sushi">Chicken</div>
+				<div id="sushi">Sushi</div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque.</p>
 			</section>
 		</div>
