--- a/restaurant-website/index.html
+++ b/restaurant-website/index.html
@@ -27,9 +27,30 @@
 						</p>
 					</div>
 
-					<button class="navbar-toggler d-sm-none" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<button class="navbar-toggler d-sm-none" type="button" data-toggle="collapse" data-target="#collapsable-nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     					<span class="navbar-toggler-icon"></span>
   					</button>
+				</div>
+
+				<div id="collapsable-nav" class="collapse navbar-collapse">
+					<ul id="nav-list" class="nav navbar-nav navbar-right">
+						<li>
+							<a href="menu-categories.html">
+							<span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
+						</li>
+						<li>
+							<a href="#">
+							<span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
+						</li>
+						<li>
+							<a href="#">
+							<span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
+						</li>
+						<li id="phone" class="hidden-xs">
+							<a href="tel:410-602-5008">
+							<span>410-602-5008</span></a><div>* We Deliver</div>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</nav>	
