--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -2,32 +2,46 @@
 <html>
 	<head>
 	 	<meta charset="utf-8">
+	 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	  	<title>Module 3 Solution</title>
+	  	<link rel="stylesheet" href="css/bootstrap.min.css">
 	  	<link rel="stylesheet" type="text/css" href="css/styles.css">
+    	<link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 	</head>
 <body>
 	<header>
-		<nav id= "header-nav" class="navbar navbar-expand-lg navbar-light bg-light">
-		  	<a class="navbar-brand" href="#">Food, LLC</a>
-		  	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-		  	</button>
-
-		  	<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		    	<ul class="navbar-nav mr-auto">
-		      		<li class="nav-item">
-		        		<a class="nav-link" href="#chicken">Chicken</a>
-		      		</li>
-		      		<li class="nav-item">
-		        		<a class="nav-link" href="#beef">Beef</a>
-		      		</li>
-		      		<li class="nav-item">
-		        		<a class="nav-link" href="#sushi">Sushi</a>
-		      		</li>
-		    	</ul>
-		  	</div>
-		</nav>
+		<nav id="header-nav" class="navbar navbar-default">
+    		<div class="container">
+      		<div class="navbar-header">
+        			<a href="index.html" class="pull-left visible-md visible-lg">
+          			<div id="logo-img"></div>
+        			</a>
+          		<div class="navbar-brand">
+            		<a href="index.html"><h1>Food, LLC</h1></a>
+          		</div>
+          		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+		            <span class="sr-only">Toggle navigation</span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+          		</button>
+        	</div>
+        	<div id="collapsable-nav" class="collapse navbar-collapse">
+           		<ul id="nav-list" class="nav navbar-nav navbar-right">
+            		<li>
+            			<a href="#chicken">Chicken</a>
+        				</li>
+            		<li>
+            			<a href="#beef">Beef</a>
+            		</li>
+        				<li>
+            			<a href="#sushi">Sushi</a>
+            		</li>
+          		</ul><!-- #nav-list -->
+        	</div><!-- .collapse .navbar-collapse -->
+    		</div><!-- .container -->
+    	</nav><!-- #header-nav -->
 	</header>
 	  	<h1>Our Menu</h1>
 	  	<div class="row">
@@ -54,5 +68,9 @@
 	      		</section>
 	    	</div>
 	  	</div>
+	<!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
