--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -30,30 +30,30 @@
         	<div id="collapsable-nav" class="collapse navbar-collapse">
            		<ul id="nav-list" class="nav navbar-nav navbar-right">
             		<li>
-            			<a href="#chicken">Chicken</a>
+            			<a class="text-center visible-xs" href="#chicken">Chicken</a>
         				</li>
             		<li>
-            			<a href="#beef">Beef</a>
+            			<a class="text-center visible-xs" href="#beef">Beef</a>
             		</li>
-        				<li>
-            			<a href="#sushi">Sushi</a>
+        				<li> 
+            			<a class="text-center visible-xs" href="#sushi">Sushi</a>
             		</li>
           		</ul><!-- #nav-list -->
         	</div><!-- .collapse .navbar-collapse -->
     		</div><!-- .container -->
     	</nav><!-- #header-nav -->
 	</header>
-	  	<h1>Our Menu</h1>
+	  	<h1 class="text-center">Our Menu</h1>
 	  	<div class="row">
-	    <div class="col-lg-4 col-md-6">
-	      	<section>
+	    <div class="col-lg-12 col-md-12">
+	      	<section id="tall">
 	        	<div id="chicken">Chicken</div>
-	        	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque.</p>
+	        	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque.</p>
 	    	</section>
 	    </div>
 	  	</div>
 	  		<div class="row">
-	    		<div class="col-lg-4 col-md-6">
+	    		<div class="col-lg-12 col-md-12">
 	      		<section>
 	        		<div id="beef">Beef</div>
 	        		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque.</p>
@@ -61,7 +61,7 @@
 	    	</div>
 	  	</div>
 	  	<div class="row">
-	    	<div class="col-lg-4 col-md-12">
+	    	<div class="col-lg-12 col-md-12">
 	      		<section>
 	        		<div id="sushi">Sushi</div>
 	        		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ad excepturi eveniet odio, fuga nam quidem reprehenderit placeat commodi? In laudantium cum nam quod vitae at eligendi consequatur sequi cumque.</p>
